# galaxy-mcp

./: .gitignore  Dockerfile  LICENSE  README.md  init-git.sh  integration.test.ts  main.py  package-lock.json  pyproject.toml  server.json
.github/: pull_request_template.md  release-drafter.yml
.github/workflows/: python-release.yml  python-tests.yml  release-drafter.yml
mcp-server-galaxy-py/: .coverage  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DEVELOPMENT.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  USAGE_EXAMPLES.md  main.py  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  tox.ini
mcp-server-galaxy-py/src/galaxy_mcp/: __init__.py  __main__.py  auth.py  server.py
mcp-server-galaxy-py/tests/: README.md  TEST_STRATEGY.md  __init__.py  conftest.py  test_connection.py  test_dataset_operations.py  test_filter_tools.py  test_helpers.py  test_history_operations.py  test_integration.py  test_job_operations.py  test_oauth.py  test_tool_operations.py  test_workflow_operations.py
mcp-server-galaxy-ts/: README.md  package.json  tsconfig.json
mcp-server-galaxy-ts/src/: claude-galaxy-example.ts  galaxy-mcp-client.ts
mcp-server-galaxy-ts/src/api/: client.ts
mcp-server-galaxy-ts/src/api/schema/: index.ts
src/: claude-galaxy-adapter.ts  galaxy-mcp-server.ts  integration.test.ts
src/api/schema/: schema.ts
ts/: LICENSE  README.md  claude-galaxy-adapter.ts  claude-galaxy-example.ts  galaxy-mcp-server.ts  package.json  tsconfig.json
