[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "galaxy-mcp"
version = "0.1.0"
description = "Model Context Protocol server for Galaxy bioinformatics platform"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.10"
dependencies = [
    "bioblend>=1.5.0",
    "mcp>=1.6.0",
    "requests>=2.32.3",
    "python-dotenv>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/galaxy-mcp"
Repository = "https://github.com/yourusername/galaxy-mcp"
Issues = "https://github.com/yourusername/galaxy-mcp/issues"

[project.scripts]
galaxy-mcp = "galaxy_mcp.__main__:run"

[project.optional-dependencies]
dev = [
    "ruff>=0.11.2",
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.25.0",
]

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py311"
select = ["E", "F", "W", "I", "N", "B", "UP", "A", "C4", "SIM", "PT"]

[tool.pytest.ini_options]
addopts = "-v --cov=galaxy_mcp --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]